[package]
name = "iec61131std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
rusty = {git = "https://github.com/PLC-lang/rusty", branch="strings_in_functions" } 
glob = "0.3"

[dev-dependencies]
inkwell = {git = "https://github.com/TheDan64/inkwell", branch="master", features=["llvm13-0"] }
rusty = {git = "https://github.com/PLC-lang/rusty", branch="strings_in_functions" } 

[dependencies]
chrono = "0.4"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
